--- a/SoftwareEngineering2020/src/group2_GUI/MaintainerAvailability.form
+++ b/SoftwareEngineering2020/src/group2_GUI/MaintainerAvailability.form
@@ -166,6 +166,9 @@
               <Events>
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="AvailabilityTableMouseClicked"/>
               </Events>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+              </AuxValues>
             </Component>
           </SubComponents>
         </Container>
