--- a/SoftwareEngineering2020/src/group2_GUI/ManageMaintenance.form
+++ b/SoftwareEngineering2020/src/group2_GUI/ManageMaintenance.form
@@ -204,6 +204,9 @@
               <AccessibilityProperties>
                 <Property name="AccessibleContext.accessibleName" type="java.lang.String" value=""/>
               </AccessibilityProperties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+              </AuxValues>
             </Component>
           </SubComponents>
         </Container>
