--- a/SoftwareEngineering2020/src/group2_GUI/MaintainerAvailability.form
+++ b/SoftwareEngineering2020/src/group2_GUI/MaintainerAvailability.form
@@ -146,25 +146,25 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTable" name="AvailabilityTable">
+            <Component class="javax.swing.JTable" name="AvailabilityTable1">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="9" rowCount="5">
                     <Column editable="false" title="MAINTAINER" type="java.lang.Object"/>
                     <Column editable="false" title="SKILLS" type="java.lang.Object"/>
-                    <Column editable="false" title="AVAIL. MON" type="java.lang.Object"/>
-                    <Column editable="false" title="AVAIL. TUE" type="java.lang.Object"/>
-                    <Column editable="false" title="AVAIL. WED" type="java.lang.Object"/>
-                    <Column editable="false" title="AVAIL. THU" type="java.lang.Object"/>
-                    <Column editable="false" title="AVAIL. FRI" type="java.lang.Object"/>
-                    <Column editable="false" title="AVAIL. SAT" type="java.lang.Object"/>
-                    <Column editable="false" title="AVAIL. SUN" type="java.lang.Object"/>
+                    <Column editable="false" title="MONDAY" type="java.lang.Object"/>
+                    <Column editable="false" title="TUESDAY" type="java.lang.Object"/>
+                    <Column editable="false" title="WEDNESDAY" type="java.lang.Object"/>
+                    <Column editable="false" title="THURSDAY" type="java.lang.Object"/>
+                    <Column editable="false" title="FRIDAY" type="java.lang.Object"/>
+                    <Column editable="false" title="SATURDAY" type="java.lang.Object"/>
+                    <Column editable="false" title="SUNDAY" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnSelectionAllowed" type="boolean" value="true"/>
               </Properties>
               <Events>
-                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="AvailabilityTableMouseClicked"/>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="AvailabilityTable1MouseClicked"/>
               </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
