--- a/SoftwareEngineering2020/src/group2_GUI/DailyAvailability.form
+++ b/SoftwareEngineering2020/src/group2_GUI/DailyAvailability.form
@@ -237,6 +237,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Select"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SelectButtonActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
