--- a/SoftwareEngineering2020/src/group2_GUI/MaintenanceActivityVerification.form
+++ b/SoftwareEngineering2020/src/group2_GUI/MaintenanceActivityVerification.form
@@ -116,7 +116,7 @@
                   <Component id="jLabel1" min="-2" pref="51" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="WeekText2" min="-2" pref="52" max="-2" attributes="0"/>
-                  <EmptySpace pref="647" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
